--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <VideoView
         android:id="@+id/video_start"
-        android:layout_width="411dp"
-        android:layout_height="411dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="55dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginBottom="19dp"
         android:clickable="false"
         android:contextClickable="false"
         android:duplicateParentState="false"
         android:fadeScrollbars="false"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/bar_start"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/bar_start"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video_start" />
 </androidx.constraintlayout.widget.ConstraintLayout>
