--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,69 +35,6 @@
         android:layout_marginBottom="157dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_start" />
-
-    <ImageView
-        android:id="@+id/image_start"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="275dp"
-        android:contentDescription="@string/app_name"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/bar_start"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/icon" />
-
-    <EditText
-        android:id="@+id/text_cpf"
-        android:layout_width="275dp"
-        android:layout_height="80dp"
-        android:ems="10"
-        android:hint="CPF"
-        android:inputType="text"
-        android:textSize="20sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/text_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_start"
-        app:layout_constraintVertical_bias="0.956" />
-
-    <Button
-        android:id="@+id/button_enter"
-        android:layout_width="180dp"
-        android:layout_height="100dp"
-        android:text="Entrar"
-        android:textColor="#240B3E"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_password"
-        app:layout_constraintVertical_bias="0.821" />
-
-    <EditText
-        android:id="@+id/text_password"
-        android:layout_width="275dp"
-        android:layout_height="80dp"
-        android:ems="10"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/video_start"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_start"
-        app:layout_constraintVertical_bias="0.982" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
