--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="light_black">#777777</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink">#E00051</color>
+    <color name="transparent">#00FFFFFF</color>
+
 </resources>
