Configurado diferentes telas dependendo da Role

--- a/app/src/main/res/layout/fragment_student_teacher.xml
+++ b/app/src/main/res/layout/fragment_student_teacher.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.UserGradeFragment">
+    tools:context=".view.StudentProfessorFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Matérias" />
+        android:text="Professores" />
 
 </FrameLayout>
