--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pink"
-    tools:context=".view.UserActivity">
+    tools:context=".view.StudentActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
