--- a/app/src/main/res/layout/fragment_student_grade.xml
+++ b/app/src/main/res/layout/fragment_student_grade.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.StudentGradeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewGrades"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Matérias" />
-
-</FrameLayout>
+        android:padding="16dp"/>
+</LinearLayout>
