--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/pink</item>
         <item name="colorPrimaryVariant">@color/pink</item>
+        <item name="android:statusBarColor">@color/pink</item>
     </style>
 
     <style name="Theme.EGrade" parent="Base.Theme.EGrade" />
