--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -29,7 +29,7 @@
             android:layout_marginEnd="20dp"
             app:labelVisibilityMode="labeled"
             android:background="@android:color/transparent"
-            app:menu="@menu/bottom_menu"/>
+            app:menu="@menu/student_bottom_menu"/>
 
     </com.google.android.material.bottomappbar.BottomAppBar>
 
