--- a/app/src/main/res/menu/coordinator_bottom_menu.xml
+++ b/app/src/main/res/menu/coordinator_bottom_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/coordinator_home"
         android:title="Inicio"
         android:icon="@drawable/home_24"/>
 
     <item
-        android:id="@+id/teachers"
-        android:title="Professores"
+        android:id="@+id/coordinator_classes"
+        android:title="Turmas"
         android:icon="@drawable/people_24"/>
 
     <item
@@ -17,12 +17,12 @@
         android:enabled="false"/>
 
     <item
-        android:id="@+id/grades"
-        android:title="Matérias"
+        android:id="@+id/coordinator_courses"
+        android:title="Cursos"
         android:icon="@drawable/book_24"/>
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/coordinator_profile"
         android:title="Perfil"
         android:icon="@drawable/user_24"/>
 
