--- a/app/src/main/res/layout/fragment_coordinator_students.xml
+++ b/app/src/main/res/layout/fragment_coordinator_students.xml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/coordinator_student_fragment"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.CoordinatorStudentsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Spinner
+        android:id="@+id/courseSpinner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Coordinator Students" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/addStudentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Adicionar Estudante"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:onClick="onAddStudentClick"/>
+
+    <EditText
+        android:id="@+id/searchEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Pesquisar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewStudents"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+</LinearLayout>
