--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#E00051</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="colorButtonSave">#34eb55</color>
+    <color name="colorButtonDelete">#eb3434</color>
 </resources>
