--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,6 @@
         <item name="android:windowBackground">#FFFFFF</item>
     </style>
 
-    <style name="EditTextStyle">
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:backgroundTint">#E00051</item>
-        <item name="android:padding">10dp</item>
-    </style>
-
     <style name="SpinnerStyle">
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:backgroundTint">#E00051</item>
@@ -23,12 +17,6 @@
     <style name="CheckBoxStyle">
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:buttonTint">#E00051</item>
-    </style>
-
-    <style name="ButtonStyle">
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:backgroundTint">#E00051</item>
-        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="ItemTextViewStyle">
@@ -45,5 +33,17 @@
     <style name="EditButtonStyle">
         <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:textColor">#E00051</item>
+    </style>
+
+    <style name="ButtonSave">
+        <item name="android:background">@color/colorButtonSave</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
+    <style name="ButtonDelete">
+        <item name="android:background">@color/colorButtonDelete</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginTop">16dp</item>
     </style>
 </resources>
